--- a/JakartaLearningProject/Base.lproj/Main.storyboard
+++ b/JakartaLearningProject/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Fur-ol-NjX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4Ju-mD-nvL">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,26 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Tab Bar Controller-->
+        <scene sceneID="5WF-83-XXU">
+            <objects>
+                <tabBarController id="4Ju-mD-nvL" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wWo-tP-5JF">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="E3G-Er-J5l"/>
+                        <segue destination="rn5-bT-KNt" kind="relationship" relationship="viewControllers" id="rnm-vv-G6U"/>
+                        <segue destination="N7a-lh-1rq" kind="relationship" relationship="viewControllers" id="rek-7Q-tqX"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6FA-Az-zEs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="988" y="21"/>
+        </scene>
+        <!--Scan-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="JakartaLearningProject" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,22 +39,20 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Scan" id="IYC-Eh-JTN"/>
                     <navigationItem key="navigationItem" id="JcN-X3-Una">
                         <barButtonItem key="rightBarButtonItem" style="plain" id="9mO-tl-Vw9">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="CR0-W8-9hi">
                                 <rect key="frame" x="305" y="7" width="89" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Achievement"/>
-                                <connections>
-                                    <segue destination="N7a-lh-1rq" kind="show" id="Onv-tV-gQM"/>
-                                </connections>
                             </button>
                         </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="957.97101449275374" y="20.758928571428569"/>
+            <point key="canvasLocation" x="1864" y="-667"/>
         </scene>
         <!--Achievement-->
         <scene sceneID="qYs-17-bR2">
@@ -47,43 +64,76 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="73h-gH-kZZ"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Achievement" id="z9T-Sb-wyx"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jRr-Kb-AmY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1715.9420289855075" y="20.758928571428569"/>
+            <point key="canvasLocation" x="1864" y="21"/>
         </scene>
-        <!--View Controller-->
+        <!--Map-->
         <scene sceneID="w1r-ld-UQA">
             <objects>
-                <viewController id="rn5-bT-KNt" sceneMemberID="viewController">
+                <viewController id="rn5-bT-KNt" customClass="MapController" customModule="JakartaLearningProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cgT-0N-qzz">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OgL-3t-3qx">
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="umf-Dj-Xva">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="769"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="umf-Dj-Xva" secondAttribute="bottom" id="CQM-FT-neP"/>
+                                    <constraint firstItem="umf-Dj-Xva" firstAttribute="top" secondItem="OgL-3t-3qx" secondAttribute="top" id="G5T-Ja-q3E"/>
+                                    <constraint firstAttribute="trailing" secondItem="umf-Dj-Xva" secondAttribute="trailing" id="Hsf-GV-H84"/>
+                                    <constraint firstItem="umf-Dj-Xva" firstAttribute="centerY" secondItem="OgL-3t-3qx" secondAttribute="centerY" id="Vf0-Cm-KXu"/>
+                                    <constraint firstItem="umf-Dj-Xva" firstAttribute="centerX" secondItem="OgL-3t-3qx" secondAttribute="centerX" id="q4F-wN-90R"/>
+                                    <constraint firstItem="umf-Dj-Xva" firstAttribute="leading" secondItem="OgL-3t-3qx" secondAttribute="leading" id="qSb-gw-H7T"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="rn5-bT-KNt" id="HSO-ki-7eI"/>
+                                </connections>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="OgL-3t-3qx" firstAttribute="top" secondItem="Bp0-Gl-rRd" secondAttribute="top" id="24u-5H-vpC"/>
+                            <constraint firstItem="OgL-3t-3qx" firstAttribute="leading" secondItem="Bp0-Gl-rRd" secondAttribute="leading" id="4x3-BW-ZDd"/>
+                            <constraint firstItem="OgL-3t-3qx" firstAttribute="bottom" secondItem="Bp0-Gl-rRd" secondAttribute="bottom" id="9vY-HS-Uao"/>
+                            <constraint firstItem="OgL-3t-3qx" firstAttribute="trailing" secondItem="Bp0-Gl-rRd" secondAttribute="trailing" id="cFb-Ly-wi3"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Bp0-Gl-rRd"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Map" id="SPX-rv-9wd"/>
+                    <connections>
+                        <outlet property="imageView" destination="umf-Dj-Xva" id="99D-bS-BYk"/>
+                        <outlet property="scrollView" destination="OgL-3t-3qx" id="4GS-wa-Rfc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dcb-em-0TJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2522" y="21"/>
+            <point key="canvasLocation" x="1863.7681159420292" y="719.86607142857144"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="9eJ-qt-Gz8">
+        <!--Information Controller-->
+        <scene sceneID="3NK-2c-9cI">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Fur-ol-NjX" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1dB-pY-h7d">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="xhL-A5-aqM"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="pXT-D5-iHg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="oSA-Pi-IFS" customClass="InformationController" customModule="JakartaLearningProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="I78-7b-mP9">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="QWV-aQ-ebS"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NY6-p9-PC4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="189.85507246376812" y="665.625"/>
+            <point key="canvasLocation" x="2917" y="-668"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="1" width="3024" height="3024"/>
+    </resources>
 </document>
